Make bio dynamic

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,7 +31,7 @@
                     {% endif %}
                 </p>
                 <p id="bioContainer" class="is-size-5 has-text-grey-lighter">
-                    Please fill this in with a dynamic bio
+                    {{ person.bio }}
                     {% if editable==True %}
                     &nbsp;
                     <span class="has-text-grey">
