Formatting and removing commented codes

--- a/templates/setting.html
+++ b/templates/setting.html
@@ -10,9 +10,9 @@
 
 {% block content %}>
 
-    <section class="section has-background-white">
+    <section class="section has-background-white has-text-centered">
         <div class="container">
-            <h1 class="is-size-1 has-text-weight-bold mt-6">Account Settings & Preferences</h1>
+            <h1 class="is-size-2 has-text-weight-bold mt-6">Account Settings & Preferences</h1>
         </div>
     </section>
 
@@ -23,10 +23,7 @@
                 <div class="section">
                     <div class="box is-centered p-0">
                         <p>
-                            <button class="button is-fullwidth is-active">Account Info</button>
-                        </p>
-                        <p>
-                            <button class="button is-fullwidth">Billing</button>
+                            <button class="button is-fullwidth is-black">Account Info</button>
                         </p>
                     </div>
                 </div>
@@ -94,7 +91,6 @@
                             <div class="field">
                                 <label class="label" for="password">Password:
                                     <input class="button is-primary" type="button" id="openbtn" name="openbtn" value="Change Password" onclick="$('#ChangePasswordModal').fadeIn('fast'); return false;">
-                                    {#                                    <button class="button is-danger " >Change Password</button>#}
                                 </label>
                             </div>
 
